added info about browser on desktop